--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,3 @@
-
 MouseInfo==0.1.3
 networkx==3.2.1
 numpy==1.26.2
@@ -7,6 +6,7 @@ opencv-contrib-python==4.6.0.66
 opencv-python==4.8.1.78
 Pillow==10.1.0
 PyAutoGUI==0.9.54
+pygame==2.5.2
 PyGetWindow==0.0.9
 PyMsgBox==1.0.9
 pyperclip==1.8.2
